--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
@@ -2,8 +2,8 @@
 
 - type: entity
   name: sedative sting
-  #parent: [BaseItem, CultYoggRestrictedItem]
-  parent: BaseItem #ToDo_SS220 del this after tests
+  parent: [BaseItem, CultYoggRestrictedItem]
+  #parent: BaseItem #ToDo_SS220 del this after tests
   id: SedativeStingCultYogg
   suffix: CultYogg
   components:
@@ -27,3 +27,4 @@
   - type: Tag
     tags:
     - CultYoggStealthProvidable
+    - CultYoggInnerHandToggleable
