--- a/Resources/Prototypes/SS220/GameRules/roundstart.yml
+++ b/Resources/Prototypes/SS220/GameRules/roundstart.yml
@@ -33,6 +33,9 @@
   - type: GameRule
     minPlayers: 40 # WARNING: this should be always synced with other cult game rules and presets!
   - type: CultYoggRule
+    whitelistToggleAble:
+      tags:
+      - CultYoggInnerHandToggleable
     stages:
       Initial: {}
       Reveal:
@@ -51,6 +54,9 @@
   - type: GameRule
     minPlayers: 60 # WARNING: this should be always synced with other cult game rules and presets!
   - type: CultYoggRule
+    whitelistToggleAble:
+      tags:
+      - CultYoggInnerHandToggleable
     stages:
       Initial: {}
       Reveal:
