--- a/Resources/Prototypes/SS220/Actions/toggle.yml
+++ b/Resources/Prototypes/SS220/Actions/toggle.yml
@@ -7,7 +7,7 @@
   components:
   - type: InstantAction
     itemIconStyle: BigItem
-    icon: { sprite: SS220/Interface/Actions/action_inner_toggle.rsi, state: L_in }
-    iconOn: { sprite: SS220/Interface/Actions/action_inner_toggle.rsi, state: L_out }
+    icon: { sprite: SS220/Interface/Actions/action_inner_toggle.rsi, state: in }
+    iconOn: { sprite: SS220/Interface/Actions/action_inner_toggle.rsi, state: out }
     useDelay: 1 # equip noise spam.
     event: !type:ToggleInnerHandEvent
