--- a/Resources/Prototypes/SS220/Actions/toggle.yml
+++ b/Resources/Prototypes/SS220/Actions/toggle.yml
@@ -1,9 +1,9 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
 - type: entity
-  id: ActionToggleLHand
+  id: ActionToggleHand
   name: Inner Hand Toggle
-  description: desc
+  description: Allow you to hide item iside your hand
   components:
   - type: InstantAction
     itemIconStyle: BigItem
