--- a/Resources/Prototypes/SS220/Species/resomi.yml
+++ b/Resources/Prototypes/SS220/Species/resomi.yml
@@ -6,8 +6,8 @@
   roundStart: true
   prototype: MobResomi
   sprites: MobResomiSprites
-  defaultSkinTone: "#e5f1f1"
-  markingLimits: MobHumanMarkingLimits
+  defaultSkinTone: "#ffffff"
+  markingLimits: MobResomiMarkingLimits
   dollPrototype: MobResomiDummy
   skinColoration: Hues
   maleFirstNames: NamesResomi
@@ -44,33 +44,26 @@
     sprite: SS220/Mobs/Species/Resomi/parts.rsi
     state: eyes
 
-# - type: markingPoints
-#   id: MobResomiMarkingLimits
-#   onlyWhitelisted: true
-#   points:
-#     Hair:
-#       points: 0
-#       required: false
-#     FacialHair:
-#       points: 0
-#       required: false
-#     Tail:
-#       points: 1
-#       required: true
-#       defaultMarkings: [ ResomiTail ]
-#     Chest:
-#       points: 2
-#       required: true
-#       defaultMarkings: [ ResomiFeathers ]
-#     Snout:
-#       points: 1
-#       required: false
-#     HeadTop:
-#       points: 1
-#       required: false
-#     HeadSide:
-#       points: 0
-#       required: false
+- type: markingPoints
+  id: MobResomiMarkingLimits
+  onlyWhitelisted: true
+  points:
+    Tail:
+      points: 1
+      required: true
+      defaultMarkings: [ ResomiTail ]
+    Chest:
+      points: 1
+      required: true
+      defaultMarkings: [ ResomiChestFeathers ]
+    Foots:
+      points: 2
+      required: false
+      defaultMarkings: [ ResomiLFootFeathers, ResomiRFootFeathers ]
+    Arms:
+      points: 2
+      required: false
+      defaultMarkings: [ ResomiLHandFeathers, ResomiRHandFeathers ]
 
 - type: humanoidBaseSprite
   id: MobResomiHead
