del unused + small steps

--- a/Resources/Prototypes/SS220/Entities/Mobs/NPCs/CultYogg/migo.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/NPCs/CultYogg/migo.yml
@@ -36,6 +36,8 @@
     interfaces:
       enum.MiGoUiKey.Erect:
         type: MiGoErectBoundUserInterface
+      enum.MiGoUiKey.Teleport:
+        type: MiGoTeleportBoundUserInterface
   - type: ShowCultYoggIcons
   - type: NpcFactionMember
     factions:
@@ -67,8 +69,6 @@
     states:
       Alive:
         Base: alive
-      Critical:
-        Base: dead
       Dead:
         Base: dead
   - type: Visibility
@@ -93,7 +93,6 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      200: Critical
       250: Dead
   - type: Destructible
     thresholds:
