--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum.yml
@@ -71,12 +71,13 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  - type: Item
-    inhandVisuals:
-      left:
-      - state: inhand-left-mag
-      right:
-      - state: inhand-right-mag
+  # Need sprite
+  # - type: Item
+  #   inhandVisuals:
+  #     left:
+  #     - state: inhand-left-mag
+  #     right:
+  #     - state: inhand-right-mag
 
 - type: entity
   id: MagazineMagnum
@@ -92,16 +93,17 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  - type: Item
-    inhandVisuals:
-      left:
-      - state: inhand-left-mag
-      - state: inhand-left-stripe
-        color: "#9b0000"
-      right:
-      - state: inhand-right-mag
-      - state: inhand-right-stripe
-        color: "#9b0000"
+  # Need sprite
+  # - type: Item
+  #   inhandVisuals:
+  #     left:
+  #     - state: inhand-left-mag
+  #     - state: inhand-left-stripe
+  #       color: "#9b0000"
+  #     right:
+  #     - state: inhand-right-mag
+  #     - state: inhand-right-stripe
+  #       color: "#9b0000"
 
 - type: entity
   id: MagazineMagnumPractice
@@ -117,16 +119,17 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  - type: Item
-    inhandVisuals:
-      left:
-      - state: inhand-left-mag
-      - state: inhand-left-stripe
-        color: "#ea5800"
-      right:
-      - state: inhand-right-mag
-      - state: inhand-right-stripe
-        color: "#ea5800"
+  # Need sprite
+  # - type: Item
+  #   inhandVisuals:
+  #     left:
+  #     - state: inhand-left-mag
+  #     - state: inhand-left-stripe
+  #       color: "#ea5800"
+  #     right:
+  #     - state: inhand-right-mag
+  #     - state: inhand-right-stripe
+  #       color: "#ea5800"
 
 - type: entity
   id: MagazineMagnumUranium
@@ -142,16 +145,17 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  - type: Item
-    inhandVisuals:
-      left:
-      - state: inhand-left-mag
-      - state: inhand-left-stripe
-        color: "#00cd42"
-      right:
-      - state: inhand-right-mag
-      - state: inhand-right-stripe
-        color: "#00cd42"
+  # Need sprite
+  # - type: Item
+  #   inhandVisuals:
+  #     left:
+  #     - state: inhand-left-mag
+  #     - state: inhand-left-stripe
+  #       color: "00cd42"
+  #     right:
+  #     - state: inhand-right-mag
+  #     - state: inhand-right-stripe
+  #       color: "00cd42"
 
 - type: entity
   id: MagazineMagnumAP
@@ -167,16 +171,17 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  - type: Item
-    inhandVisuals:
-      left:
-      - state: inhand-left-mag
-      - state: inhand-left-stripe
-        color: "#540000"
-      right:
-      - state: inhand-right-mag
-      - state: inhand-right-stripe
-        color: "#540000"
+  # Need Sprite
+  # - type: Item
+  #   inhandVisuals:
+  #     left:
+  #     - state: inhand-left-mag
+  #     - state: inhand-left-stripe
+  #       color: "#540000"
+  #     right:
+  #     - state: inhand-right-mag
+  #     - state: inhand-right-stripe
+  #       color: "#540000"
 
 - type: entity
   id: MagazineMagnumSubMachineGunEmpty
