бластерная энергоячейка теперь помещается в зарядник

--- a/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
@@ -36,3 +36,7 @@
           components:
           - HitscanBatteryAmmoProvider
           - ProjectileBatteryAmmoProvider
+          # SS220 Added KRSPowerCell tag for charging support begin
+          tags:
+          - KRSPowerCell
+          # SS220 Added KRSPowerCell tag for charging support end
