--- a/Resources/Prototypes/Entities/Structures/Power/chargers.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/chargers.yml
@@ -170,6 +170,10 @@
           - HitscanBatteryAmmoProvider
           - ProjectileBatteryAmmoProvider
           - Stunbaton
+          # SS220 Added KRSPowerCell tag for charging support begin
+          tags:
+          - KRSPowerCell
+          # SS220 Added KRSPowerCell tag for charging support end
 
 - type: entity
   parent: BaseItemRecharger
@@ -230,6 +234,10 @@
           - HitscanBatteryAmmoProvider
           - ProjectileBatteryAmmoProvider
           - Stunbaton
+          # SS220 Added KRSPowerCell tag for charging support begin
+          tags:
+          - KRSPowerCell
+          # SS220 Added KRSPowerCell tag for charging support end
 
 - type: entity
   parent: BaseRecharger
