--- a/Resources/Prototypes/Catalog/Cargo/cargo_materials.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_materials.yml
@@ -58,6 +58,18 @@
   category: cargoproduct-category-name-materials
   group: market
 
+# SS220-wood-and-plants-in-cargo-begin
+- type: cargoProduct
+  id: MaterialWoodPlanks
+  icon:
+    sprite: Objects/Materials/materials.rsi
+    state: wood_3
+  product: CrateMaterialCargoWood
+  cost: 3300
+  category: cargoproduct-category-name-materials
+  group: market
+# SS220-wood-and-plants-in-cargo-end
+
 # SS220-no-buying-plasma-begin
 # - type: cargoProduct
 #   id: MaterialPlasma
