--- a/Resources/Prototypes/Catalog/Fills/Crates/service.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/service.yml
@@ -378,3 +378,68 @@
     contents:
     - id: BoxLightbulbColorfulMixed
     - id: BoxLighttubeColorfulMixed
+
+# SS220-wood-and-plants-in-cargo-begin
+- type: entity
+  id: CratePottedPlant
+  parent: CrateGenericSteel
+  name: potted plant crate
+  description: Contains one random potted plant for your station!
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedPlantRandom
+
+- type: entity
+  id: CratePottedPlants
+  parent: CrateGenericSteel
+  name: potted plants crate
+  description: Contains five random potted plants for your station! This is a better deal.
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedPlantRandom
+        amount: 5
+
+- type: entity
+  id: CrateBioLumPottedPlant
+  parent: CrateGenericSteel
+  name: potted bioluminescent plant crate
+  description: Contains one exclusive random bioluminescent potted plant for your station! Wow... it's glowing.
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedBioLumPlantRandom
+
+- type: entity
+  id: CrateBioLumPottedPlant
+  parent: CrateGenericSteel
+  name: potted bioluminescent plants crate
+  description: Contains five exclusive random bioluminescent potted plants for your station! Wow... it's glowing. This is a better deal.
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedBioLumPlantRandom
+        amount: 5
+
+- type: entity
+  id: CratePlasticPottedPlant
+  parent: CrateGenericSteel
+  name: potted plastic plant crate
+  description: Contains one cheap random plastic potted plant for your station! It looks like the real thing.
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedPlantRandomPlastic
+
+- type: entity
+  id: CratePlasticPottedPlant
+  parent: CrateGenericSteel
+  name: potted plastic plants crate
+  description: Contains five cheap ones random plastic potted plants for your station! It looks like the real thing. This is a better deal?..
+  components:
+  - type: StorageFill
+    contents:
+      - id: PottedPlantRandomPlastic
+        amount: 5
+# SS220-wood-and-plants-in-cargo-end
