--- a/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
@@ -36,7 +36,7 @@
           components:
           - HitscanBatteryAmmoProvider
           - ProjectileBatteryAmmoProvider
-          # SS220 Added KRSPowerCell tag for charging support begin
+          # SS220 Added WeaponRechargerWhitelist tag for charging support begin
           tags:
-          - KRSPowerCell
-          # SS220 Added KRSPowerCell tag for charging support end
+          - WeaponRechargerWhitelist
+          # SS220 Added WeaponRechargerWhitelist tag for charging support end
