--- a/Resources/Prototypes/Catalog/Cargo/cargo_service.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_service.yml
@@ -244,7 +244,7 @@
   icon:
     sprite: Structures/Furniture/potted_plants.rsi
     state: plant-10
-  product: CratePottedPlants
+  product: CrateRandomPottedPlants
   cost: 3500
   category: cargoproduct-category-name-service
   group: market
@@ -264,7 +264,7 @@
   icon:
     sprite: Structures/Furniture/potted_plants.rsi
     state: plant-09
-  product: CrateBioLumPottedPlants
+  product: CrateRandomBioLumPottedPlants
   cost: 6000
   category: cargoproduct-category-name-service
   group: market
@@ -284,7 +284,7 @@
   icon:
     sprite: Structures/Furniture/potted_plants.rsi
     state: plant-29
-  product: CratePlasticPottedPlants
+  product: CrateRandomPlasticPottedPlants
   cost: 1500
   category: cargoproduct-category-name-service
   group: market
