--- a/Resources/Prototypes/SS220/Entities/Mobs/NPCs/CultYogg/migo.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/NPCs/CultYogg/migo.yml
@@ -27,6 +27,7 @@
   - type: Body
     prototype: MiGoBody
   - type: ComplexInteraction #For UI opening only
+  - type: ShowHealthBars
   - type: Telepathy
     canSend: true
     telepathyChannelPrototype: TelepathyChannelYoggSothothCult
