--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/jackets.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/jackets.yml
@@ -3,6 +3,7 @@
 # Base
 - type: entity
   parent: ClothingOuterBase
+  abstract: true
   id: ClothingOuterJacketsBase
   components:
   - type: Sprite
@@ -31,10 +32,41 @@
     - InShirt
     - WhitelistChameleon
 
+- type: entity
+  parent: ClothingOuterBase
+  abstract: true
+  id: ClothingOuterJacketsVestBase
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/dark.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/dark.rsi  
+  # - type: ItemSlots
+  #   slots:
+  #     item:
+  #       name: Надето
+  #       whitelist:
+  #         tags:
+  #         - InShirt
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+  # - type: ItemMapper
+  #   mapLayers:
+  #     belt-gold:
+  #       whitelist:
+  #         components:
+  #         - ClothingBeltGoldBuckle
+  #   sprite: SS220/Clothing/Uniforms/Shirt/shirt_overlay.rsi
+  - type: Tag
+    tags:
+    - InShirt
+    - WhitelistChameleon
+
 # Jackets (Пиджаки)
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsDark
+  id: ClothingOuterJacketsDark
   name: dark jackets
   description: A dark jacket for formal occasions or shadowy corridors.  
   components:
@@ -45,7 +77,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsBlue
+  id: ClothingOuterJacketsBlue
   name: blue jackets
   description: A crisp blue jacket, reminiscent of clear skies.  
   components:
@@ -56,7 +88,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsBlueindigo
+  id: ClothingOuterJacketsBlueindigo
   name: blueindigo jackets
   description: A deep indigo jacket with a hint of twilight mystery.
   components:
@@ -67,7 +99,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsGrey
+  id: ClothingOuterJacketsGrey
   name: grey jackets
   description: A neutral grey jacket — practicality over flair.  
   components:
@@ -78,7 +110,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsPink
+  id: ClothingOuterJacketsPink
   name: pink jackets
   description: A playful pink jacket for those who dare to stand out. 
   suffix: For playtime
@@ -90,7 +122,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsCrimson
+  id: ClothingOuterJacketsCrimson
   name: crimson jackets
   description: Crimson like a warning. This jacket marks those who lead with fire, not words.
   suffix: For playtime
@@ -102,9 +134,9 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsAshen
+  id: ClothingOuterJacketsAshen
   name: ashen jackets
-  description: Пепельно-серый пиджак, чья ткань шепчет о холодных приговорах и нерушимых цепях.
+  description: A jacket in ash-grey, its fabric whispers of cold verdicts and unbroken chains. 
   suffix: For playtime
   components:
   - type: Sprite
@@ -114,7 +146,7 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsDarkcarp
+  id: ClothingOuterJacketsDarkcarp
   name: carp leather jacket
   description: Crafted from carp leather, its scales shimmer faintly — a trophy from the abyss.
   suffix: For playtime
@@ -126,12 +158,141 @@
 
 - type: entity
   parent: ClothingOuterJacketsBase
-  id: ClothingUniformJacketsGold
+  id: ClothingOuterJacketsGold
   name: gold jacket
-  description: Позолоченный и дерзкий. Для избранных Шлёпой — где богатство и оружие, и доспех.
+  description: Gilded and audacious. Worn by Floppa's chosen — where wealth is both armor and weapon.  
   suffix: Sponsor, Floppa
   components:
   - type: Sprite
     sprite: SS220/Clothing/OuterClothing/Jackets/gold.rsi
   - type: Clothing
     sprite: SS220/Clothing/OuterClothing/Jackets/gold.rsi
+
+# Vests (Желеты под пиджак)
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestDark
+  name: dark formal vest
+  description: A sleek black vest for polished professional looks.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/dark.rsi  
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/dark.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestBlue
+  name: navy blue vest
+  description: Classic navy vest that pairs well with any formal attire.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/blue.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/blue.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestBlueindigo
+  name: indigo vest
+  description: A deep indigo vest with subtle sophisticated charm.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/blueindigo.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/blueindigo.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestGrey
+  name: grey vest
+  description: Versatile grey vest for business casual occasions.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/grey.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/grey.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestPink
+  name: playful pink vest
+  description: A vibrant pink vest for bold fashion statements.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/pink.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/pink.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestCrimson
+  name: crimson authority vest
+  description: This blood-red vest marks its wearer as someone not to be trifled with.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/officialred.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/officialred.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestAshen
+  name: ashen judjment vest
+  description: The pale grey vest of those who dispense cold, impartial justice.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/officialgrey.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/officialgrey.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestVictorian
+  name: victorian elegance vest
+  description: A vintage-inspired vest with intricate detailing and old-world charm.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/victorian.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/victorian.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestVictorianRed
+  name: crimson victorian vest
+  description: A rich red victorian vest for those who appreciate dramatic flair.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/victorian_red.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/victorian_red.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestDarkcarp
+  name: carp leather vest
+  description: Crafted from rare carp hide, this vest shimmers with aquatic menace.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/darkcarp.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/darkcarp.rsi
+
+- type: entity
+  parent: ClothingOuterJacketsBase
+  id: ClothingOuterJacketsVestGold
+  name: gilded floppa vest
+  description: This ostentatious gold vest is reserved for Floppa's most valued associates.
+  suffix: Sponsor, Floppa
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/gold.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Jackets/Vest/gold.rsi
