--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum.yml
@@ -71,13 +71,12 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  # Need sprite
-  # - type: Item
-  #   inhandVisuals:
-  #     left:
-  #     - state: inhand-left-mag
-  #     right:
-  #     - state: inhand-right-mag
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-mag
+      right:
+      - state: inhand-right-mag
 
 - type: entity
   id: MagazineMagnum
@@ -93,17 +92,16 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  # Need sprite
-  # - type: Item
-  #   inhandVisuals:
-  #     left:
-  #     - state: inhand-left-mag
-  #     - state: inhand-left-stripe
-  #       color: "#9b0000"
-  #     right:
-  #     - state: inhand-right-mag
-  #     - state: inhand-right-stripe
-  #       color: "#9b0000"
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-mag
+      - state: inhand-left-stripe
+        color: "#9b0000"
+      right:
+      - state: inhand-right-mag
+      - state: inhand-right-stripe
+        color: "#9b0000"
 
 - type: entity
   id: MagazineMagnumPractice
@@ -119,17 +117,16 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  # Need sprite
-  # - type: Item
-  #   inhandVisuals:
-  #     left:
-  #     - state: inhand-left-mag
-  #     - state: inhand-left-stripe
-  #       color: "#ea5800"
-  #     right:
-  #     - state: inhand-right-mag
-  #     - state: inhand-right-stripe
-  #       color: "#ea5800"
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-mag
+      - state: inhand-left-stripe
+        color: "#ea5800"
+      right:
+      - state: inhand-right-mag
+      - state: inhand-right-stripe
+        color: "#ea5800"
 
 - type: entity
   id: MagazineMagnumUranium
@@ -145,17 +142,16 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  # Need sprite
-  # - type: Item
-  #   inhandVisuals:
-  #     left:
-  #     - state: inhand-left-mag
-  #     - state: inhand-left-stripe
-  #       color: "00cd42"
-  #     right:
-  #     - state: inhand-right-mag
-  #     - state: inhand-right-stripe
-  #       color: "00cd42"
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-mag
+      - state: inhand-left-stripe
+        color: "#00cd42"
+      right:
+      - state: inhand-right-mag
+      - state: inhand-right-stripe
+        color: "#00cd42"
 
 - type: entity
   id: MagazineMagnumAP
@@ -171,17 +167,16 @@
       map: ["enum.GunVisualLayers.Base"]
     - state: mag-1
       map: ["enum.GunVisualLayers.Mag"]
-  # Need Sprite
-  # - type: Item
-  #   inhandVisuals:
-  #     left:
-  #     - state: inhand-left-mag
-  #     - state: inhand-left-stripe
-  #       color: "#540000"
-  #     right:
-  #     - state: inhand-right-mag
-  #     - state: inhand-right-stripe
-  #       color: "#540000"
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-mag
+      - state: inhand-left-stripe
+        color: "#540000"
+      right:
+      - state: inhand-right-mag
+      - state: inhand-right-stripe
+        color: "#540000"
 
 - type: entity
   id: MagazineMagnumSubMachineGunEmpty
