--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/crossbow.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/crossbow.yml
@@ -70,14 +70,41 @@
 - type: entity
   id: CrossbowKingClown
   name: sweet revenge crossbow
-  parent: BaseBow
+  parent: BaseItem
   description: Revenge can sting to the core.
   components:
   - type: Sprite
     sprite: SS220/Objects/Weapons/Guns/Crossbow/crossbow_clown.rsi
     state: icon
   - type: Item
-    size: Huge
+    size: Normal
+  - type: Gun
+    minAngle: 0
+    maxAngle: 5
+    fireRate: 1
+    selectedMode: SemiAuto
+    availableModes:
+    - SemiAuto
+    soundGunshot:
+      collection: BulletMiss
+    soundEmpty: null
+    clumsyProof: true
+  - type: Appearance
+  - type: Wieldable
+    wieldSound:
+      path: /Audio/Items/bow_pull.ogg
+  - type: UseDelay
+    delay: 0.1
+  - type: EmitSoundOnLand
+    sound:
+      path: /Audio/SS220/Effects/Drop/bow.ogg ##new sound_drop effect, add MIXnikita
+      params:
+        volume: 2
+  - type: ContainerContainer
+    containers:
+      projectiles: !type:ContainerSlot
+  - type: ContainerAmmoProvider
+    container: projectiles
   - type: ItemSlots
     slots:
       projectiles:
@@ -88,4 +115,3 @@
           tags:
           - Arrow
           - Plunger
-  - type: Appearance
