--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -1,32 +1,3 @@
-#KingClown Hardsuit
-- type: entity
-  parent: ClothingHeadHardsuitWithLightBase
-  id: ClothingHeadHelmetHardsuitKingClown
-  name: fish firebrand
-  description: This is not a disguise. This is not an escape from space. It's fate.
-  components:
-  - type: BreathMask
-  - type: Sprite
-    sprite: SS220/Clothing/Head/Hardsuits/king_clown.rsi
-  - type: Clothing
-    sprite: SS220/Clothing/Head/Hardsuits/king_clown.rsi
-    equipSound: /Audio/Mecha/mechmove03.ogg
-    unequipSound: /Audio/Effects/Emotes/parp1.ogg
-  - type: Armor
-    modifiers:
-      coefficients:
-        Blunt: 0.85
-        Slash: 0.85
-        Piercing: 0.85
-        Heat: 0.85
-        Radiation: 0.6
-  - type: FireProtection
-    reduction: 0.2
-  - type: PointLight
-    color: green
-    radius: 6
-    energy: 4
-=======
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
 #Security Pilot Hardsuit
@@ -77,7 +48,6 @@
       coefficients:
         Blunt: 0.8
         Slash: 0.8
-        Piercing: 0.8
         Piercing: 0.8
 
 - type: entity
@@ -190,3 +160,33 @@
   - type: PressureProtection
     highPressureMultiplier: 0.3
     lowPressureMultiplier: 1000
+
+#KingClown Hardsuit
+- type: entity
+  parent: [ClothingHeadHardsuitBase, ClothingHeadSuitWithLightBase]
+  id: ClothingHeadHelmetHardsuitKingClown
+  name: fish firebrand
+  description: This is not a disguise. This is not an escape from space. It's fate.
+  components:
+  - type: BreathMask
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hardsuits/king_clown.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hardsuits/king_clown.rsi
+    equipSound: /Audio/Mecha/mechmove03.ogg
+    unequipSound: /Audio/Effects/Emotes/parp1.ogg
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.85
+        Slash: 0.85
+        Piercing: 0.85
+        Heat: 0.85
+        Radiation: 0.6
+  - type: FireProtection
+    reduction: 0.2
+  - type: EyeProtection
+  - type: PointLight
+    color: "#1eff00ce"
+    radius: 6
+    energy: 4
