--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -1,22 +1,4 @@
-#KingClown Hardsuit
-- type: entity
-  parent: ClothingOuterHardsuitBase
-  id: ClothingOuterHardsuitKingClown
-  name: the body of the king of kings
-  description: He is older than the universe.
-  components:
-  - type: Sprite
-    sprite: SS220/Clothing/OuterClothing/Hardsuits/king_clown.rsi
-  - type: Clothing
-    sprite: SS220/Clothing/OuterClothing/Hardsuits/king_clown.rsi
-  - type: PressureProtection
-    highPressureMultiplier: 0.05
-    lowPressureMultiplier: 1000
-  - type: Unremoveable
-    lockToHands: false
-  - type: ExplosionResistance
-    damageCoefficient: 0.5
-=======
+
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
 - type: entity
@@ -143,29 +125,6 @@
         Blunt: 0.6
         Slash: 0.6
         Piercing: 0.6
-        Heat: 0.6
-        Caustic: 0.6
-        Stamina: 0.4
-        Radiation: 0.5
-  - type: ClothingSpeedModifier
-    walkModifier: 0.8
-    sprintModifier: 0.9
-  - type: HeldSpeedModifier
-  #ss220 special_sounds start
-  - type: SpecialSounds
-  - type: Vocal
-    sounds:
-      Male: MaleEvil
-      Female: FemaleEvil
-      Unsexed: MaleEvil
-  #ss220 special_sounds end
-  - type: ToggleableClothing
-    clothingPrototype: ClothingHeadHelmetHardsuitKingClown
-  - type: Tag
-    tags:
-    - MonkeyWearable
-    - Hardsuit
-    - WhitelistChameleon
         Heat: 0.7
         Caustic: 0.7
         Radiation: 0.50
@@ -176,7 +135,6 @@
     sprintModifier: 0.80
   - type: HeldSpeedModifier
   - type: ToggleableClothing
-    clothingPrototype: ClothingHeadHelmetHardsuitSecurityPilot
     clothingPrototype: ClothingHeadHelmetHardsuitSecurityPilot
 
 # Death Squad Commander Hardsuit
@@ -365,3 +323,39 @@
   - type: HeldSpeedModifier
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHelmetHardsuitCentcom
+
+#KingClown Hardsuit
+- type: entity
+  parent: ClothingOuterHardsuitBase
+  id: ClothingOuterHardsuitKingClown
+  name: the body of the king of kings
+  description: He is older than the universe.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Hardsuits/king_clown.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Hardsuits/king_clown.rsi
+  - type: PressureProtection
+    highPressureMultiplier: 0.05
+    lowPressureMultiplier: 1000
+  - type: Unremoveable
+    lockToHands: false
+  - type: ExplosionResistance
+    damageCoefficient: 0.5
+  - type: StaminaResistance
+    damageCoefficient: 0.4
+  - type: ClothingSpeedModifier
+    walkModifier: 0.80
+    sprintModifier: 0.90
+  - type: HeldSpeedModifier
+  - type: ToggleableClothing
+    clothingPrototype: ClothingHeadHelmetHardsuitKingClown
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.5
+        Slash: 0.5
+        Piercing: 0.5
+        Heat: 0.5
+        Caustic: 0.5
+        Radiation: 0.5
