--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Projectiles/arrows.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Projectiles/arrows.yml
@@ -20,7 +20,14 @@
   - type: SolutionContainerManager
     solutions:
       ammo:
-        maxVol: 10
+        maxVol: 20
         reagents:
         - ReagentId: SweetPrank
-          Quantity: 10
+          Quantity: 5
+        - ReagentId: Pax
+          Quantity: 5
+  - type: SolutionInjectOnEmbed
+    transferAmount: 10
+    solution: ammo
+  - type: SolutionTransfer
+    maxTransferAmount: 10
