--- a/Resources/Prototypes/Entities/Clothing/Neck/ties.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/ties.yml
@@ -5,14 +5,16 @@
   description: A neosilk clip-on red tie.
   components:
   - type: Sprite
-    sprite: Clothing/Neck/Ties/redtie.rsi
+    sprite: SS220/Clothing/Neck/Ties/red.rsi #SS220 Law Department Fashion
   - type: Clothing
-    sprite: Clothing/Neck/Ties/redtie.rsi
+    sprite: SS220/Clothing/Neck/Ties/red.rsi #SS220 Law Department Fashion
   - type: Tag
     tags:
     - HamsterWearable
     - WhitelistChameleon
     - ClothMade
+    - InShirtTie #SS220 Law Department Fashion
+    - TieRed #SS220 Law Department Fashion
 
 - type: entity
   parent: ClothingNeckBase
@@ -21,9 +23,18 @@
   description: A loosely tied necktie, a perfect accessory for the over-worked detective.
   components:
   - type: Sprite
-    sprite: Clothing/Neck/Ties/dettie.rsi
+    sprite: SS220/Clothing/Neck/Ties/dark.rsi #SS220 Law Department Fashion
   - type: Clothing
-    sprite: Clothing/Neck/Ties/dettie.rsi
+    sprite: SS220/Clothing/Neck/Ties/dark.rsi #SS220 Law Department Fashion
+  #SS220 Law Department Fashion Begin
+  - type: Tag
+    tags:
+    - HamsterWearable
+    - WhitelistChameleon
+    - ClothMade
+    - InShirtTie
+    - TieDark
+  #SS220 Law Department Fashion End
 
 - type: entity
   parent: ClothingNeckBase
@@ -32,14 +43,16 @@
   description: Why do we all have to wear these ridiculous ties?
   components:
   - type: Sprite
-    sprite: Clothing/Neck/Ties/scitie.rsi
+    sprite: SS220/Clothing/Neck/Ties/sci.rsi #SS220 Law Department Fashion
   - type: Clothing
-    sprite: Clothing/Neck/Ties/scitie.rsi
+    sprite: SS220/Clothing/Neck/Ties/sci.rsi #SS220 Law Department Fashion
   - type: Tag
     tags:
     - ClothMade
     - HamsterWearable
     - WhitelistChameleon
+    - InShirtTie #SS220 Law Department Fashion
+    - TieSci #SS220 Law Department Fashion
   #ss220 special_sounds start
   - type: SpecialSounds
   - type: Vocal
