--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
@@ -22,6 +22,8 @@
   parent: BulletDisabler
   categories: [ HideSpawnMenu ]
   components:
+  - type: StaminaDamageOnCollide
+    damage: 0 # krs stamina-damage-fix
   - type: Sprite
     sprite: SS220/Objects/Weapons/Guns/Projectiles/redprojectile.rsi
     layers:
