--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
@@ -19,11 +19,9 @@
 - type: entity
   name : Blaster bolt
   id: BulletBlaster
-  parent: BulletDisabler
+  parent: BaseBullet
   categories: [ HideSpawnMenu ]
   components:
-  - type: StaminaDamageOnCollide
-    damage: 0 # krs stamina-damage-fix
   - type: Sprite
     sprite: SS220/Objects/Weapons/Guns/Projectiles/redprojectile.rsi
     layers:
