новый базовый прототип

--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/Weapons/Guns/Ammunitions/projectiles.yml
@@ -19,7 +19,7 @@
 - type: entity
   name : Blaster bolt
   id: BulletBlaster
-  parent: BaseBullet
+  parent: BaseBlasterBullet
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
