Потерял знак, чинию ошибки чеков

--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -411,7 +411,7 @@
         mask:
         - Impassable
         - BulletImpassable
-      fly-by: *flybyfixture
+      fly-by: &flybyfixture
   - type: Ammo
   - type: Projectile
     impactEffect: BulletImpactEffectDisabler
