new collision layer

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
@@ -22,6 +22,7 @@
         - MachineMask
         layer:
         - BulletImpassable
+        - InteractImpassable
   - type: Sprite
     noRot: true
     sprite: SS220/Structures/CultYogg/fungus_hydroponic.rsi
