поменял название на Bullet bolt

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -1225,7 +1225,7 @@
 
 # #SS220 Base blaster bullet prototype
 - type: entity
-  name : disabler bolt
+  name : Bullet bolt
   id: BaseBlasterBullet
   parent: BaseBullet
   categories: [ HideSpawnMenu ]
